Updated home page setup
